# bibliomancer

./: .cruft.json  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
docs/: conf.py  index.rst
notebooks/: ExampleAnalysis.ipynb  Introspection.ipynb
src/bibliomancer/: __init__.py  cli.py  enricher.py  eutils.py  formatter.py  io.py  mapper.py  mergeutil.py  utilities.py  validator.py
src/bibliomancer/datamodel/: __init__.py  biblio.py  biblio.yaml  biblio_td.py  enums.py  from_paperpile.tr.yaml  paperpile.py  paperpile.yaml
src/bibliomancer/templates/: default.markdown.jinja2
tests/: test_cli.py  test_formatter.py  test_io.py  test_repair.py  test_utilities.py  test_validator.py
tests/input/: bbop.paperpile.csv  hpo.paperpile.csv  test.paperpile.csv
